# dual_optimistic_l2

./: .gitmodules  CLAUDE.md  Cargo.toml  NOTICE  README.md  THIRD_PARTY_LICENSES
.claude/memory/: MEMORY.md  project_arch.md
crates/consensus/: Cargo.toml
crates/consensus/src/: base_committer.rs  block_manager.rs  commit.rs  committee.rs  context.rs  dag_state.rs  lib.rs  linearizer.rs  node.rs  soft_commit.rs  stake_aggregator.rs  threshold_clock.rs  types.rs  universal_committer.rs
crates/consensus/src/sim/: mod.rs  network.rs  node.rs
crates/node/: Cargo.toml
crates/node/src/: lib.rs
crates/parallel-evm/: Cargo.toml
crates/parallel-evm/src/: lib.rs
crates/scheduler/: Cargo.toml
crates/scheduler/src/: backpressure.rs  lib.rs  pending_queue.rs  pipeline.rs
crates/shadow-state/: Cargo.toml
crates/shadow-state/src/: lib.rs
crates/shared/: Cargo.toml
crates/shared/src/: lib.rs
crates/testkit/: Cargo.toml
crates/testkit/src/: lib.rs
docs/: architecture.md  benchmark-results.md  interfaces.md  licensing.md  mysticeti-analysis.md  revm-analysis.md  test-strategy.md
docs/tasks/: TASKS.md  phase-0.md  phase-1.md  phase-2.md  phase-3.md  phase-4.md  phase-5.md  phase-6.md
