[workspace]
members = [
    "crates/shared",
    "crates/consensus",
    "crates/scheduler",
    "crates/shadow-state",
    "crates/parallel-evm",
    "crates/node",
    "crates/testkit",
]
resolver = "2"

[workspace.package]
edition      = "2021"
version      = "0.1.0"
rust-version = "1.85"
authors      = ["dual-optimistic-l2"]
license      = "MIT"
keywords     = ["evm", "blockchain"]
repository   = ""
readme       = ""

# Workspace lints (required by revm crates that use `[lints] workspace = true`)
[workspace.lints]

[workspace.dependencies]
tokio        = { version = "1", features = ["sync", "time"] }
shared       = { path = "crates/shared" }
consensus    = { path = "crates/consensus" }
scheduler    = { path = "crates/scheduler" }
shadow-state = { path = "crates/shadow-state" }
parallel-evm = { path = "crates/parallel-evm" }
testkit      = { path = "crates/testkit" }

# revm internal aliases (required for revm crate workspace.* inheritance)
primitives    = { path = "extern/revm/crates/primitives", package = "revm-primitives", default-features = false }
bytecode      = { path = "extern/revm/crates/bytecode",   package = "revm-bytecode",   default-features = false }
state         = { path = "extern/revm/crates/state",      package = "revm-state",      default-features = false }

# third-party deps required by revm crates
auto_impl     = "1.3.0"
bitflags      = { version = "2.10", default-features = false }
either        = { version = "1.15.0", default-features = false }
thiserror     = { version = "2.0", default-features = false }
alloy-eip7928 = { version = "0.3.0", default-features = false }
serde         = { version = "1.0", default-features = false }
serde_json    = { version = "1.0", default-features = false }
bitvec        = { version = "1", default-features = false }
paste         = "1.0"
phf           = { version = "0.13", default-features = false }
rand          = "0.9"
anyhow           = "1.0"
alloy-primitives = { version = "1.5.2", default-features = false }
