[package]
name = "parallel-evm"
version.workspace = true
edition.workspace = true

[dependencies]
shared = { workspace = true }
shadow-state              = { workspace = true }
revm-database-interface   = { path = "../../extern/revm/crates/database/interface" }
tokio                     = { workspace = true }
