[package]
name = "shadow-state"
version.workspace = true
edition.workspace = true

[dependencies]
shared                  = { workspace = true }
revm-primitives         = { path = "../../extern/revm/crates/primitives" }
revm-state              = { path = "../../extern/revm/crates/state" }
revm-database-interface = { path = "../../extern/revm/crates/database/interface" }
