[package]
name = "testkit"
version.workspace = true
edition.workspace = true

[dependencies]
shared = { workspace = true }
consensus = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt", "test-util"] }
node = { path = "../node" }
